[project]
name = "nhs-postcode-router"
version = "1.0.0"
description = "A CLI tool to map UK postcodes to NHS GP Practices, PCNs, and ICB boundaries"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.28.1",
]

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]